# assignments

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  main.yml
life_expectancy/: cleaning.py
life_expectancy/tests/: test_cleaning.py  test_pyproject.py
